--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: var(--header-color);
   background-color: var(--light-color);
 }
@@ -58,7 +58,7 @@ li {
 }
 
 .logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -117,7 +117,7 @@ li {
 }
 .current::after {
   position: absolute;
-  content: '';
+  content: "";
   display: inline-block;
   width: 100%;
   height: 4px;
@@ -157,8 +157,12 @@ li {
   max-width: 1600px;
   margin-right: auto;
   margin-left: auto;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/hero.jpg');
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -248,7 +252,7 @@ li {
   flex-basis: 270px;
 }
 .peculiarities-title::before {
-  content: '';
+  content: "";
   display: flex;
   height: 120px;
   margin-bottom: 30px;
@@ -260,16 +264,16 @@ li {
   border-radius: 4px;
 }
 .peculiarities-title:nth-child(1)::before {
-  background-image: url('../images/antenna.svg');
+  background-image: url("../images/antenna.svg");
 }
 .peculiarities-title:nth-child(2)::before {
-  background-image: url('../images/clock.svg');
+  background-image: url("../images/clock.svg");
 }
 .peculiarities-title:nth-child(3)::before {
-  background-image: url('../images/diagram.svg');
+  background-image: url("../images/diagram.svg");
 }
 .peculiarities-title:nth-child(4)::before {
-  background-image: url('../images/astronaut.svg');
+  background-image: url("../images/astronaut.svg");
 }
 
 .title-text {
@@ -408,7 +412,7 @@ li {
 }
 
 .buttons-portfolio {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   line-height: 1.6;
   text-align: center;
@@ -422,7 +426,8 @@ li {
   height: 38px;
   padding: 6px 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button li {
@@ -687,4 +692,59 @@ img {
   cursor: pointer;
 }
 .modal-close {
+}
+textarea {
+  resize: none;
+}
+.text-form {
+  display: flex;
+  flex-direction: column;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--header-color);
+  margin-top: 40px;
+}
+.form-studio {
+  display: flex;
+  margin-top: 12px;
+  flex-direction: column;
+  padding-left: 40px;
+  padding-right: 40px;
+
+}
+.form-studio input {
+  width: 100%;
+
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.form-studio-textarea {
+  display: flex;
+  height: 120px;
+  width: 100%;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.form-studio-textarea::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+  padding-top: 12px;
+  padding-left: 16px;
+}
+.df {
+position: relative;
+}
+.icon-modal-svg{
+  position: absolute;
+  top: 0;
+
 }
