--- a/css/styles.css
+++ b/css/styles.css
@@ -678,6 +678,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
 }
 
 .icon-modal {
@@ -690,8 +691,10 @@ img {
   background-color: var(--light-color);
   line-height: 0;
   cursor: pointer;
+  transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close {
+  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea {
   resize: none;
@@ -706,15 +709,17 @@ textarea {
   letter-spacing: 0.03em;
 
   color: var(--header-color);
-  margin-top: 40px;
 }
 .form-studio {
   display: flex;
   margin-top: 12px;
   flex-direction: column;
-  padding-left: 40px;
-  padding-right: 40px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
 
+  color: var(--text-color);
 }
 .form-studio input {
   width: 100%;
@@ -729,6 +734,9 @@ textarea {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  margin-bottom: 20px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .form-studio-textarea::placeholder {
   font-weight: 400;
@@ -737,14 +745,78 @@ textarea {
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
-  padding-top: 12px;
-  padding-left: 16px;
+  padding: 12px 16px;
 }
-.df {
-position: relative;
-}
-.icon-modal-svg{
-  position: absolute;
-  top: 0;
+.form-icon {
+  position: relative;
 
+}
+.icon-modal-svg {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 12px;
+  height: 12px;
+  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-modal {
+  margin-bottom: 30px;
+}
+.modal-btn {
+  cursor: pointer;
+  background: var(--accent-color);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  border: 0;
+  align-items: center;
+  letter-spacing: 0.06em;
+  color: var(--light-color);
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  margin-left: 27%;
+
+}
+
+.form-input {
+  padding-left: 42px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.form-input:focus,
+.form-input:hover {
+  color: #2196f3;
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.form-input:focus + .icon-modal-svg,
+.form-input:hover + .icon-modal-svg {
+  fill: var(--accent-color);
+}
+.form-studio-textarea:focus,
+.form-studio-textarea:hover {
+  color: #2196f3;
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.checkbox-modal-text {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+
+  color: var(--text-color);
+}
+.link-checkbox {
+  color: var(--accent-color);
+}
+.icon-modal:hover .modal-close,
+.icon-modal:focus .modal-close {
+  fill: var(--accent-color);
+}
+.checkbox {
+  margin-left: 12px;
 }
