--- a/css/styles.css
+++ b/css/styles.css
@@ -691,10 +691,10 @@ img {
   background-color: var(--light-color);
   line-height: 0;
   cursor: pointer;
-  transition: fill 3000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close {
-  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 textarea {
   resize: none;
@@ -707,7 +707,6 @@ textarea {
   line-height: 23px;
   text-align: center;
   letter-spacing: 0.03em;
-
   color: var(--header-color);
 }
 .form-studio {
@@ -723,7 +722,6 @@ textarea {
 }
 .form-studio input {
   width: 100%;
-
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -735,21 +733,22 @@ textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   margin-bottom: 20px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 12px 16px ;
 }
 .form-studio-textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-
   color: rgba(117, 117, 117, 0.5);
-  padding: 12px 16px;
+  padding-top: 4px;
+
 }
 .form-icon {
   position: relative;
-
 }
 .icon-modal-svg {
   position: absolute;
@@ -757,7 +756,7 @@ textarea {
   left: 12px;
   width: 12px;
   height: 12px;
-  transition:  fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox-modal {
   margin-bottom: 30px;
@@ -771,20 +770,19 @@ textarea {
   font-size: 16px;
   line-height: 30px;
   border: 0;
-  align-items: center;
+  position: relative;
   letter-spacing: 0.06em;
   color: var(--light-color);
   width: 200px;
   height: 50px;
   text-align: center;
-  margin-left: 27%;
-
 }
 
 .form-input {
   padding-left: 42px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 .form-input:focus,
@@ -808,7 +806,7 @@ textarea {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
-
+  display: inline-block;
   color: var(--text-color);
 }
 .link-checkbox {
@@ -819,5 +817,81 @@ textarea {
   fill: var(--accent-color);
 }
 .checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+.form {
+  display: flex;
+  justify-content: center;
+}
+.icon-modal-svg-footer {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  fill: var(--light-color);
+}
+.footer-icon-text-form {
+}
+.modal-btn-footer {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--light-color);
+  width: 200px;
+  height: 50px;
+  cursor: pointer;
+  background: var(--accent-color);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0;
+  position: relative;
+  justify-content: center;
+  padding: 10px 62px 10px 28px;
   margin-left: 12px;
+}
+.footer-input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: var(--fon-color);
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  color: white;
+}
+.footer-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.icon-checkbox {
+  display: inline-block;
+  width: 18px;
+  height: 17px;
+  background: var(--light-color);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
+    0 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border: 2px solid var(--header-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .icon-checkbox {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url("../images/icon-check.svg");
+  background-size: contain;
+  background-origin: border-box;
+}
+.checkbox:hover + .icon-checkbox,
+.checkbox:focus + .icon-checkbox {
+  border: 2px solid var(--accent-color);
 }
