--- a/css/styles.css
+++ b/css/styles.css
@@ -736,7 +736,7 @@ textarea {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 12px 16px ;
+  padding: 12px 16px;
 }
 .form-studio-textarea::placeholder {
   font-weight: 400;
@@ -745,7 +745,6 @@ textarea {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
   padding-top: 4px;
-
 }
 .form-icon {
   position: relative;
@@ -875,23 +874,25 @@ textarea {
 }
 .icon-checkbox {
   display: inline-block;
-  width: 18px;
-  height: 17px;
+  width: 16px;
+  height: 15px;
   background: var(--light-color);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
     0 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  border: 2px solid var(--header-color);
+  border: 0;
+  outline: 2px solid var(--header-color);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checkbox:checked + .icon-checkbox {
-  border-color: var(--accent-color);
+.checkbox:checked + .icon-modal-check {
+  outline: var(--accent-color);
   background-color: var(--accent-color);
-  background-image: url("../images/icon-check.svg");
+  /*background-image: url("../images/icon-check.svg");*/
   background-size: contain;
   background-origin: border-box;
 }
 .checkbox:hover + .icon-checkbox,
 .checkbox:focus + .icon-checkbox {
-  border: 2px solid var(--accent-color);
+  /*border: 2px solid var(--accent-color);*/
+  outline: 2px solid #2196f3;
 }
