--- a/css/styles.css
+++ b/css/styles.css
@@ -288,9 +288,9 @@ li {
   position: absolute;
   bottom: 0;
   left: 0;
-
+  display: flex;
   background: rgba(47, 48, 58, 0.8);
-
+  justify-content: center;
   width: 370px;
   height: 70px;
   font-weight: 700;
@@ -300,10 +300,11 @@ li {
   text-transform: uppercase;
   text-align: center;
   color: var(--light-color);
+  flex-direction: column
 }
 .title-modal-text {
-  display: inline-block;
-  padding: 27px 0;
+
+
 }
 
 .applications {
@@ -354,6 +355,7 @@ li {
   justify-content: center;
   fill: var(--icon-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
 }
 .team-icon-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -494,6 +496,7 @@ li {
   fill: var(--icon-color);
   display: flex;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
 }
 .clients-icon-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -535,7 +538,9 @@ li {
 .footer-box-icon {
   margin-left: 70px;
 }
-
+.footer-box-icon-btn{
+  margin-left: auto;
+}
 .footer-box-flex {
   display: flex;
   justify-content: flex-start;
@@ -551,6 +556,7 @@ li {
   fill: var(--light-color);
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: none;
 }
 .footer-icon-svg {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -601,9 +607,12 @@ img {
   border: 1px solid var(--border-shadow-color);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.box-cart:hover,
-.box-cart:focus {
+.portfolio-box-img{
+  display: inline-block;
+  outline: none;
+}
+.portfolio-box-img:hover,
+.portfolio-box-img:focus {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -710,21 +719,21 @@ textarea {
   color: var(--header-color);
 }
 .form-studio {
-  display: flex;
+  display: block;
   margin-top: 12px;
+  margin-bottom: 4px;
   flex-direction: column;
   font-weight: 400;
   font-size: 12px;
   line-height: 14px;
   letter-spacing: 0.01em;
-
-  color: var(--text-color);
+   color: var(--text-color);
+  position: relative;
 }
-.form-studio input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
+
+.form-studio-label {
+margin-bottom: 4px;
+  display: block;
 }
 .form-studio-textarea {
   display: flex;
@@ -747,11 +756,11 @@ textarea {
   padding-top: 4px;
 }
 .form-icon {
-  position: relative;
+
 }
 .icon-modal-svg {
   position: absolute;
-  top: 50%;
+  top: calc(50% + 3px);
   left: 12px;
   width: 12px;
   height: 12px;
@@ -766,7 +775,7 @@ textarea {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
-  font-size: 16px;
+display: block;
   line-height: 30px;
   border: 0;
   position: relative;
@@ -774,7 +783,8 @@ textarea {
   color: var(--light-color);
   width: 200px;
   height: 50px;
-  text-align: center;
+
+  margin: auto;
 }
 
 .form-input {
@@ -783,6 +793,11 @@ textarea {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
 }
 .form-input:focus,
 .form-input:focus-visible,
@@ -825,10 +840,9 @@ textarea {
   justify-content: center;
 }
 .icon-modal-svg-footer {
-  position: absolute;
-  top: 13px;
-  right: 28px;
   fill: var(--light-color);
+  margin-left: 10px;
+
 }
 .footer-icon-text-form {
 }
@@ -848,10 +862,10 @@ textarea {
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0;
-  position: relative;
   justify-content: center;
-  padding: 10px 62px 10px 28px;
+  padding: 10px 24px 10px 28px;
   margin-left: 12px;
+  outline: none;
 }
 .footer-input {
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -863,6 +877,7 @@ textarea {
   padding-left: 16px;
   color: white;
 }
+
 .footer-input::placeholder {
   font-weight: 400;
   font-size: 16px;
@@ -876,16 +891,19 @@ textarea {
   display: inline-block;
   width: 16px;
   height: 15px;
+  vertical-align: middle;
   background: var(--light-color);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.14),
     0 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  border: 0;
-  outline: 2px solid var(--header-color);
+  border: 2px solid var(--header-color);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.icon-checkbox-text {
+  vertical-align: middle;
+}
 .checkbox:checked + .icon-modal-check {
-  outline: var(--accent-color);
+  border: var(--accent-color);
   background-color: var(--accent-color);
   /*background-image: url("../images/icon-check.svg");*/
   background-size: contain;
@@ -894,5 +912,5 @@ textarea {
 .checkbox:hover + .icon-checkbox,
 .checkbox:focus + .icon-checkbox {
   /*border: 2px solid var(--accent-color);*/
-  outline: 2px solid #2196f3;
+  border: 2px solid var(--accent-color);
 }
